feat(release): update 8d1d320
